--- a/style.css
+++ b/style.css
@@ -1,11 +1,41 @@
 /* Your code here */
+
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 .card-1 {
   color: #DEB64B;
   text-align:center;
-  font-size: 32px;
+  font-size: 26px;
   background-color: black;
-  margin: -25px;
+  border-style: solid;
+  border-width: 4px;
+  border-color:grey;
+  font-family: poppins; 
+  /*border-bottom-color:yellow;
+  border-right-color:blueviolet;
+  border-left-color:aqua;*/
 }
 
-.title {
+.josh {
+  color: #DEB64B;
+  background-color: white;
+border-radius: 350px;
+}
+
+.thousand {
+  font-size: 10px;
+  display: inline-block;
+  background-color: white;
+  color:black
+}
+.sale {
+  font-size: 19px;
+  margin-top: 10px;
+} 
+.call {
+  font-size: 20px;
+  margin-top:15px;
 }
